--- a/areas-of-practice.html
+++ b/areas-of-practice.html
@@ -9,7 +9,7 @@
     <title>Hill &amp; Beyer | Areas of Practice</title>
     <meta name='description' content='Hill &amp; Beyer: A Professional Law Corporation.' />
     <meta name='keywords' content='home,' />
-    <link type='image/x-icon' rel='icon' href='http://hillandbeyer.github.io/img/favicon.ico' />
+    <link type='image/x-icon' rel='icon' href='https://hillandbeyer.github.io/img/favicon.ico' />
     <link rel='apple-touch-icon' sizes='57x57' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
     <link rel='apple-touch-icon' sizes='114x114' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
     <link rel='apple-touch-icon' sizes='72x72' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
