--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
     <meta name='description' content='Hill &amp; Beyer: A Professional Law Corporation.' />
     <meta name='keywords' content='home,' />
     <link type='image/x-icon' rel='icon' href='https://hillandbeyer.github.io/img/favicon.ico' />
-    <link rel='apple-touch-icon' sizes='57x57' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
-    <link rel='apple-touch-icon' sizes='114x114' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
-    <link rel='apple-touch-icon' sizes='72x72' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
-    <link rel='apple-touch-icon' sizes='144x144' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
-    <link type='text/css' href='../hillandbeyer.github.io/css/hb.css' rel='stylesheet' media='all'>
+    <link rel='apple-touch-icon' sizes='57x57' href='https://hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
+    <link rel='apple-touch-icon' sizes='114x114' href='https://hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
+    <link rel='apple-touch-icon' sizes='72x72' href='https://hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
+    <link rel='apple-touch-icon' sizes='144x144' href='https://hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
+    <link type='text/css' href='https://hillandbeyer.github.io/css/hb.css' rel='stylesheet' media='all'>
     <style type='text/css'>
 	.carousel-item { .align-items: center } /* Remove once Bootstap 4 updated to scale carousel correctly */
 	.carousel-caption { background: rgba(128, 128, 128, 0.5); bottom: 0; right: 0%; left: 0%; padding: 15px }
@@ -27,7 +27,7 @@
         <button class='navbar-toggler navbar-toggler-right' type='button' data-toggle='collapse' data-target='#togbox' aria-controls='togbox' aria-expanded='false' aria-label='Toggle navigation'>
           <span class='navbar-toggler-icon'></span>
         </button>
-        <a tabindex='100' accesskey='O' class='navbar-brand' href='home.html' title='Return to the home page'><img src='../hillandbeyer.github.io/img/hb-logo.png' alt='Hill &amp; Beyer'/></a>
+        <a tabindex='100' accesskey='O' class='navbar-brand' href='home.html' title='Return to the home page'><img src='https://hillandbeyer.github.io/img/hb-logo.png' alt='Hill &amp; Beyer'/></a>
         <div class='collapse navbar-collapse' id='togbox'>
           <ul class='navbar-nav ml-auto mt-2 mt-md-0'>
             <li class='nav-item'><a class='nav-link' tabindex='101' accesskey='A' href='attorneys.html' title='Meet our attorneys'><i class="fa fa-balance-scale" aria-hidden="true"></i> Attorneys</a></li>
@@ -100,7 +100,7 @@
     <!-- Back to Top Button -->
     <div id='back-to-top'><a id='back-to-top-icon' href='#' title='Click to return to the top of the page'><i class='fa fa-chevron-circle-up fa-2x' aria-hidden='true'></i></a></div>
 
-    <script type='text/javascript' src='../hillandbeyer.github.io/js/hb.js'></script>
+    <script type='text/javascript' src='https://hillandbeyer.github.io/js/hb.js'></script>
     <script type='text/javascript'>
 	// Google Analytics
     </script>
