--- a/attorneys.html
+++ b/attorneys.html
@@ -10,11 +10,11 @@
     <meta name='description' content="Hill &amp; Beyer: A Professional Law Corporation." />
     <meta name='keywords' content="home," />
     <link type='image/x-icon' rel='icon' href='https://hillandbeyer.github.io/img/favicon.ico' />
-    <link rel='apple-touch-icon' sizes='57x57' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
-    <link rel='apple-touch-icon' sizes='114x114' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
-    <link rel='apple-touch-icon' sizes='72x72' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
-    <link rel='apple-touch-icon' sizes='144x144' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
-    <link type='text/css' href='../hillandbeyer.github.io/css/hb.css' rel='stylesheet' media='all'>
+    <link rel='apple-touch-icon' sizes='57x57' href='https://hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
+    <link rel='apple-touch-icon' sizes='114x114' href='https://hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
+    <link rel='apple-touch-icon' sizes='72x72' href='https://hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
+    <link rel='apple-touch-icon' sizes='144x144' href='https://hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
+    <link type='text/css' href='https://hillandbeyer.github.io/css/hb.css' rel='stylesheet' media='all'>
     <style type='text/css'>
 	.img-thumbnail { margin: 0 15px 15px 0 }
 	div.attorneys { margin-bottom: 15px }
@@ -27,7 +27,7 @@
         <button class='navbar-toggler navbar-toggler-right' type='button' data-toggle='collapse' data-target='#togbox' aria-controls='togbox' aria-expanded='false' aria-label='Toggle navigation'>
           <span class='navbar-toggler-icon'></span>
         </button>
-        <a tabindex='100' accesskey='O' class='navbar-brand' href='home.html' title='Return to the home page'><img src='../hillandbeyer.github.io/img/hb-logo.png' alt='Hill &amp; Beyer'/></a>
+        <a tabindex='100' accesskey='O' class='navbar-brand' href='home.html' title='Return to the home page'><img src='https://hillandbeyer.github.io/img/hb-logo.png' alt='Hill &amp; Beyer'/></a>
         <div class='collapse navbar-collapse' id='togbox'>
           <ul class='navbar-nav ml-auto mt-2 mt-md-0'>
             <li class='nav-item active'><a class='nav-link' tabindex='101' accesskey='A' href='attorneys.html' title='Meet our attorneys'><i class="fa fa-balance-scale" aria-hidden="true"></i> Attorneys</a></li>
@@ -44,7 +44,7 @@
       <h1>Attorneys</h1>
       <div class='row attorneys'>
         <div class='col-xs-12 col-sm-5 col-md-4'>
-          <img src='../hillandbeyer.github.io/img/bret-beyer.jpg' alt='Bret C. Beyer, Sr.' class='img-thumbnail'>
+          <img src='https://hillandbeyer.github.io/img/bret-beyer.jpg' alt='Bret C. Beyer, Sr.' class='img-thumbnail'>
         </div>
         <div class='col-xs-12 col-sm-7 col-md-8'>
           <p><strong>BRET C. BEYER, SR.</strong>, born September 20, 1962; admitted to the Louisiana Bar in 1987; Senior Partner of Hill & Beyer, APLC. Mr. Beyer earned his Bachelor of Business Administration degree, cum laude, from the University of Texas at Austin (UT) in 1984 and passed all sections of the CPA Examination Boards in 1984 on the first attempt before entering law school.  He earned his Juris Doctor Degree from Louisiana State University Law School in 1987 and was selected as Senior Editor of the Louisiana Law Review.  Mr. Beyer graduated 3rd in his class, and was also honored with an award of Order of the Coif.  In addition, he received multiple American Jurisprudence Awards.</p>
@@ -53,7 +53,7 @@
       </div>
       <div class='row attorneys'>
         <div class='col-xs-12 col-sm-5 col-md-4'>
-          <img src='../hillandbeyer.github.io/img/erin-beyer.jpg' alt='Erin S. Beyer' class='img-thumbnail'>
+          <img src='https://hillandbeyer.github.io/img/erin-beyer.jpg' alt='Erin S. Beyer' class='img-thumbnail'>
         </div>
         <div class='col-xs-12 col-sm-7 col-md-8'>
           <p><strong>ERIN S. BEYER</strong>, born 1967; admitted to the Louisiana Bar in 1992; Senior Partner of Hill & Beyer, APLC.  Ms. Beyer obtained a B.A. Degree from Louisiana State University in 1989, and a Juris Doctor degree from Louisiana State University Law School in 1992, where she earned honors for Moot Court Board, American Jurisprudence Awards, Chancellor’s List, and Flory Trial, graduating in the top 20%. As a practicing civil litigation trial attorney, Ms. Beyer was voted a 2018 Acadiana Profile Top Lawyer. She has argued before the Louisiana Supreme Court and is admitted to practice in all State and Federal Courts in Louisiana, as well as the United States Fifth Circuit Court of Appeals. She is a member of the American, Federal, Louisiana, State and Lafayette Parish Bar Associations. Mrs. Beyer is also a member of the Award-Winning Acadiana American Inns of Court and enjoys volunteering with numerous groups including the American Red Cross, United Blood Services, Teen Court, Law on Tape, homeless shelters, and illiteracy programs. Hill & Beyer has been the recipient of the Small Firm Award for its dedication and commitment to pro bono service in the community. For over a decade, Ms. Beyer has been a Faculty Member of the National Institute for Trial Advocacy (“NITA”), primarily for the Gulf Coast Region in New Orleans, Louisiana, as well as for the Southwest Region in Dallas, Texas, teaching litigation skills to both law students and practicing attorneys. She has also presented numerous lectures, seminars and demonstrations regarding such topics as:  brain and spinal injuries, catastrophic injury, and complex medical litigation, effective direct and cross examination of experts, Louisiana tort law, automobile liability defense, merchant liability law, restaurant liability, the Americans with Disabilities Act, age discrimination, sexual harassment defense, and construction law. In her spare time, Ms. Beyer has been certified as a pilates instructor, and enjoys yoga, snow skiing, scuba diving, attending her children’s many sports activities and game nights.</p>
@@ -61,7 +61,7 @@
       </div>
       <div class='row attorneys'>
         <div class='col-xs-12 col-sm-5 col-md-4'>
-          <img src='../hillandbeyer.github.io/img/megan-reaux-2022.jpg' alt='Megan Réaux' class='img-thumbnail'>
+          <img src='https://hillandbeyer.github.io/img/megan-reaux-2022.jpg' alt='Megan Réaux' class='img-thumbnail'>
         </div>
         <div class='col-xs-12 col-sm-7 col-md-8'>
           <p><strong>MEGAN E. RÉAUX</strong>, born September 2, 1987; admitted to the Louisiana Bar Association in 2011; associate attorney at Hill & Beyer, APLC.</p>
@@ -84,7 +84,7 @@
     <!-- Wait/Busy -->
     <div class='busy'><div class='icon'><i class='fa fa-circle-o-notch fa-spin fa-5x' aria-hidden='true'></i></div></div>
 
-    <script type='text/javascript' src='../hillandbeyer.github.io/js/hb.js'></script>
+    <script type='text/javascript' src='https://hillandbeyer.github.io/js/hb.js'></script>
     <script type='text/javascript'>
       // Google Analytics
     </script>
