--- a/contact-us.html
+++ b/contact-us.html
@@ -10,11 +10,11 @@
     <meta name='description' content='Hill &amp; Beyer: A Professional Law Corporation.' />
     <meta name='keywords' content='home,' />
     <link type='image/x-icon' rel='icon' href='http://hillandbeyer.github.io/img/favicon.ico' />
-    <link rel='apple-touch-icon' sizes='57x57' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
-    <link rel='apple-touch-icon' sizes='114x114' href='../hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
-    <link rel='apple-touch-icon' sizes='72x72' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
-    <link rel='apple-touch-icon' sizes='144x144' href='../hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
-    <link type='text/css' href='../hillandbeyer.github.io/css/hb.css' rel='stylesheet' media='all'>
+    <link rel='apple-touch-icon' sizes='57x57' href='https://hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
+    <link rel='apple-touch-icon' sizes='114x114' href='https://hillandbeyer.github.io/img/touch-icon-iphone-114.png' />
+    <link rel='apple-touch-icon' sizes='72x72' href='https://hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
+    <link rel='apple-touch-icon' sizes='144x144' href='https://hillandbeyer.github.io/img/touch-icon-ipad-144.png' />
+    <link type='text/css' href='https://hillandbeyer.github.io/css/hb.css' rel='stylesheet' media='all'>
     <style type='text/css'>
     </style>
   </head>
@@ -25,7 +25,7 @@
         <button class='navbar-toggler navbar-toggler-right' type='button' data-toggle='collapse' data-target='#togbox' aria-controls='togbox' aria-expanded='false' aria-label='Toggle navigation'>
           <span class='navbar-toggler-icon'></span>
         </button>
-        <a tabindex='100' accesskey='O' class='navbar-brand' href='home.html' title='Return to the home page'><img src='../hillandbeyer.github.io/img/hb-logo.png' alt='Hill &amp; Beyer'/></a>
+        <a tabindex='100' accesskey='O' class='navbar-brand' href='home.html' title='Return to the home page'><img src='https://hillandbeyer.github.io/img/hb-logo.png' alt='Hill &amp; Beyer'/></a>
         <div class='collapse navbar-collapse' id='togbox'>
           <ul class='navbar-nav ml-auto mt-2 mt-md-0'>
             <li class='nav-item active'><a class='nav-link' tabindex='101' accesskey='A' href='attorneys.html' title='Meet our attorneys'><i class="fa fa-balance-scale" aria-hidden="true"></i> Attorneys</a></li>
@@ -43,7 +43,7 @@
       <div class='row'>
         <div class='col-xs-12 col-sm-5 col-md-6'>
 		  <p>Hill &amp; Beyer, APLC<br/>101 La Rue France, Suite 502<br/>Post Office Box 53006<br/>Lafayette, LA 70503</p>
-          <a href='http://www.google.com/maps/place/101+La+Rue+France+%23502,+Lafayette,+LA+70508/@30.201792,-92.0146694,15.25z/data=!4m5!3m4!1s0x86249ce384e61cab:0xc38164dd2c674d4b!8m2!3d30.1948666!4d-92.014654' target='_blank'><img src='../hillandbeyer.github.io/img/hill-and-beyer-map.png' alt='Click to popup Google Maps' class='img-fluid'/></a>
+          <a href='http://www.google.com/maps/place/101+La+Rue+France+%23502,+Lafayette,+LA+70508/@30.201792,-92.0146694,15.25z/data=!4m5!3m4!1s0x86249ce384e61cab:0xc38164dd2c674d4b!8m2!3d30.1948666!4d-92.014654' target='_blank'><img src='https://hillandbeyer.github.io/img/hill-and-beyer-map.png' alt='Click to popup Google Maps' class='img-fluid'/></a>
         </div>
         <div class='col-xs-12 col-sm-7 col-md-6'>
           <p>Phone: <a href='tel:3372329733'>(337) 232-9733</a></p>
@@ -63,7 +63,7 @@
     <!-- Back to Top Button -->
     <div id='back-to-top'><a id='back-to-top-icon' href='#' title='Click to return to the top of the page'><i class='fa fa-chevron-circle-up fa-2x' aria-hidden='true'></i></a></div>
 
-    <script type='text/javascript' src='../hillandbeyer.github.io/js/hb.js'></script>
+    <script type='text/javascript' src='https://hillandbeyer.github.io/js/hb.js'></script>
     <script type='text/javascript'>
 	// Google Analytics
     </script>
