--- a/our-clients.html
+++ b/our-clients.html
@@ -49,52 +49,52 @@
 	  <ul class='items'>
         <li>Abbott Laboratories</li>
         <li>Acadiana Management Group, LLC</li>
+	<li>Ace American Insurance Company</li>
         <li>Acute Rehabilitation Hospital, LLC</li>
-        <li>Allied Waste Industries, Inc.</li>
-        <li>American Modern Insurance Group</li>
+        <li>American Sentinel Insurance Company</li>
         <li>Amylin Pharmaceuticals, Inc.</li>
         <li>Andersen Logistics and Andersen Corporation</li>
         <li>Atlas Assurance Company</li>
         <li>Audubon Insurance Group</li>
-        <li>Baker Hughes, Inc. and its subsidiaries</li>
-        <li>BFI Waste Services, LLC</li>
+        <li>Baker Hughes Company and its subsidiaries</li>
+        <li>Baker Petrolite LLC</li>
+	<li>BFI Waste Services, LLC</li>	  
         <li>BIS Salamis Services, Inc.</li>
         <li>BJ Services Company</li>
-        <li>Bohn & Dawson, Incorporated</li>
-        <li>Browning Ferris, Inc.</li>
+        <li>Bohn & Dawson, Inc.</li>
+        <li>Cannon Cochran Management Services, Inc.</li>
         <li>Carboline Company</li>
-        <li>Capital City Insurance Company</li>
-        <li>Comstock Insurance Company</li>
         <li>Discover Property & Casualty Insurance Company</li>
         <li>Eagle Window & Door, LLC</li>
         <li>EMCO Enterprises, Inc.</li>
         <li>Fairfield Inn, Inc.</li>
-        <li>F. A. Richard & Associates, Inc. (FARA)</li>
         <li>Farmers’ Insurance Company</li>
         <li>Federal Express Corporation</li>
         <li>Financial Indemnity Company</li>
         <li>First Financial Insurance Company</li>
-        <li>Gallagher Bassett Services, Inc.</li>
+        <li>GE Oil & Gas, Inc.</li>
+	<li>Gallagher Bassett Services, Inc.</li>
         <li>General Agents Insurance Company of North America, Inc.</li>
-        <li>Graybar Electric Company, Inc.</li>
+        <li>Graybar Electric Company</li>
         <li>Hartford Fire Insurance Company</li>
         <li>Home Depot, U.S.A., Inc.</li>
         <li>Independent Fire Insurance Company</li>
-        <li>Louisiana Insurance Guaranty Association (LIGA)</li>
+        <li>Insurance Company of North America</li>
         <li>Meche & Whipple, Certified Public Accountants</li>
         <li>MGA Insurance Company</li>
         <li>National Insurance Association</li>
+	<li>Outdoorsy, Inc.</li>
         <li>Provident American Insurance Company</li>
         <li>Re-Med, LLC</li>
         <li>Republic Services, Inc.</li>
         <li>Rite Aid, Incorporated</li>
         <li>Sage Hospitality, Inc.</li>
-        <li>Sonic Drive-In Restaurants</li>
+        <li>Sedgwick Claims Management, Inc.</li>
         <li>Specialty Risk Services, Inc.</li>
         <li>Sprint Communications Company, L.P.</li>
         <li>Stericycle, Inc.</li>
         <li>TIG Insurance Company</li>
-        <li>Waussau Insurance Companies</li>
+        <li>Wausau Insurance Companies</li>
         <li>Zurich Insurance Company</li>
       </ul>
     </div>
