--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
 
     <!-- Footer / Start -->
     <div class='footer hidden-print text-center'>
-      Call: <a href='tel:3372329733'>(337) 232-9733</a> or <a href='contact-us.html'>Contact Us</a>
+      Call: <a href='tel:3372329733'>(337) 232-9733</a> or <a href='contact-us.html'>Contact Us</a>  | Copyright © 2025 Hill & Beyer APLC
     </div>
     <!-- Footer / End -->
 
