--- a/areas-of-practice.html
+++ b/areas-of-practice.html
@@ -62,7 +62,7 @@
             <li>Legal, Insurance Agent, and Insurance Adjuster Malpractice, and other types of defense</li>
           </ul>
           <p>Our litigation practice includes Trial and Appellate work in all State and Federal Courts in Louisiana, and our Administrative and Regulatory practice involves all levels of local, state and federal boards and governing bodies throughout Louisiana.  See attached list of some of our representative clients.</p>
-          <p>Many of our clients have us represent them throughout the entire State of Louisiana.  For other clients, our practice is concentrated in Central and Southern Louisiana, which is comprised of Lafayette, Baton Rouge, New Orleans and the remaining the seven Acadiana/Cajun parishes.</p>
+          <p>Many of our clients have us represent them throughout the entire State of Louisiana.  For other clients, our practice is concentrated in Central and Southern Louisiana, which comprises Lafayette, Baton Rouge, New Orleans and the remaining the seven Acadiana/Cajun parishes.</p>
         </div>
       </div>
     </div>
