--- a/contact-us.html
+++ b/contact-us.html
@@ -42,7 +42,7 @@
 	  <h1>Contact Us</h1>
       <div class='row'>
         <div class='col-xs-12 col-sm-5 col-md-6'>
-		  <p>Hill &amp; Beyer, APLC<br/>101 La Rue France, Suite 502<br/>Post Office Box 53006<br/>Lafayette, LA 70503</p>
+		  <p>Hill &amp; Beyer, APLC<br/>101 La Rue France, Suite 502<br/>Post Office Box 53006<br/>Lafayette, LA 70505-3006</p>
           <a href='http://www.google.com/maps/place/101+La+Rue+France+%23502,+Lafayette,+LA+70508/@30.201792,-92.0146694,15.25z/data=!4m5!3m4!1s0x86249ce384e61cab:0xc38164dd2c674d4b!8m2!3d30.1948666!4d-92.014654' target='_blank'><img src='https://hillandbeyer.com/img/hill-and-beyer-map.png' alt='Click to popup Google Maps' class='img-fluid'/></a>
         </div>
         <div class='col-xs-12 col-sm-7 col-md-6'>
