--- a/areas-of-practice.html
+++ b/areas-of-practice.html
@@ -9,6 +9,7 @@
     <title>Hill &amp; Beyer | Areas of Practice</title>
     <meta name='description' content='Hill &amp; Beyer: A Professional Law Corporation.' />
     <meta name='keywords' content='home,' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link type='image/x-icon' rel='icon' href='https://hillandbeyer.com/img/favicon.ico' />
     <link rel='apple-touch-icon' sizes='57x57' href='https://hillandbeyer.com/img/touch-icon-iphone-114.png' />
     <link rel='apple-touch-icon' sizes='114x114' href='https://hillandbeyer.com/img/touch-icon-iphone-114.png' />
